--- a/.editorconfig
+++ b/.editorconfig
@@ -8,7 +8,7 @@ charset = utf-8
 indent_style = space
 indent_size = 2
 
-[src/**.{ts,json,js}]
+[{bin,src}/**.{ts,json,js}]
 trim_trailing_whitespace = true
 insert_final_newline = true
 indent_style = space
