--- a/package.json
+++ b/package.json
@@ -31,12 +31,16 @@
     "CodeChain"
   ],
   "dependencies": {
-    "codechain-sdk": "^1.1.0",
+    "cli-table3": "^0.5.1",
     "codechain-primitives": "^0.5.0",
-    "rlp": "^2.2.2"
+    "codechain-sdk": "^1.1.0",
+    "prompt-password": "^1.2.0",
+    "rlp": "^2.2.2",
+    "yargs": "^13.2.2"
   },
   "devDependencies": {
     "@types/node": "^11.9.4",
+    "@types/yargs": "^13.0.0",
     "prettier": "^1.16.4",
     "tslint": "^5.12.1",
     "tslint-config-prettier": "^1.18.0",
