--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "dependencies": {
     "cli-table3": "^0.5.1",
     "codechain-primitives": "^1.0.1",
-    "codechain-sdk": "^1.2.0",
+    "codechain-sdk": "^2.0.0-alpha.2",
     "prompt-password": "^1.2.0",
     "rlp": "^2.2.2",
     "yargs": "^13.2.2"
