--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
   ],
   "dependencies": {
     "cli-table3": "^0.5.1",
-    "codechain-sdk": "^2.0.0-alpha.2",
     "prompt-password": "^1.2.0",
     "rlp": "^2.2.2",
     "yargs": "^13.2.2"
@@ -40,9 +39,13 @@
   "devDependencies": {
     "@types/node": "^11.9.4",
     "@types/yargs": "^13.0.0",
+    "codechain-sdk": "^2.0.0-alpha.2",
     "prettier": "^1.16.4",
     "tslint": "^5.12.1",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.3.3"
+  },
+  "peerDependencies": {
+    "codechain-sdk": "^2.0.0-alpha.2"
   }
 }
