--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ node_modules
 # Visual Studio Code - https://code.visualstudio.com/
 .settings/
 .vscode/
+
+# Typescript Incremental build cache
+.tsbuildinfo
+
