--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "rlp": "^2.2.2"
   },
   "devDependencies": {
+    "@types/bn.js": "^4.11.5",
     "@types/node": "^11.9.4",
     "codechain-sdk": "^2.0.0-alpha.2",
     "prettier": "^1.16.4",
