--- a/ccstake/package.json
+++ b/ccstake/package.json
@@ -29,11 +29,12 @@
     "CodeChain"
   ],
   "dependencies": {
+    "cli-table3": "^0.5.1",
     "codechain-sdk": "^2.0.0-alpha.2",
     "codechain-stakeholder-sdk": "^2.0.0-alpha.3",
-    "cli-table3": "^0.5.1",
     "prompt-password": "^1.2.0",
     "rlp": "^2.2.2",
+    "strip-ansi": "^5.2.0",
     "yargs": "^13.2.2"
   },
   "devDependencies": {
