--- a/ccstake/package.json
+++ b/ccstake/package.json
@@ -1,6 +1,6 @@
 {
   "name": "codechain-stakeholder-cli",
-  "version": "2.0.0-alpha.6",
+  "version": "2.0.0",
   "description": "A CLI for CodeChain stakeholders",
   "author": "CodeChain Team <hi@codechain.io>",
   "license": "ISC",
@@ -30,8 +30,8 @@
   ],
   "dependencies": {
     "cli-table3": "^0.5.1",
-    "codechain-sdk": "^2.0.0-alpha.2",
-    "codechain-stakeholder-sdk": "^2.0.0-alpha.6",
+    "codechain-sdk": "^2.0.0",
+    "codechain-stakeholder-sdk": "^2.0.0",
     "prompts": "^2.2.1",
     "rlp": "^2.2.2",
     "strip-ansi": "^5.2.0",
