--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "codechain-stakeholder-sdk",
-  "version": "2.0.0-alpha.6",
+  "version": "2.0.0",
   "description": "A JavaScript implementation for CodeChain stake token related custom actions and custom transactions",
   "author": "CodeChain Team <hi@codechain.io>",
   "license": "ISC",
@@ -33,7 +33,7 @@
   "devDependencies": {
     "@types/bn.js": "^4.11.5",
     "@types/node": "^11.9.4",
-    "codechain-sdk": "^2.0.0-alpha.2",
+    "codechain-sdk": "^2.0.0",
     "prettier": "^1.16.4",
     "tslint": "^5.12.1",
     "tslint-config-prettier": "^1.18.0",
